name:                pidfile
version:             0.1.0.0
synopsis:            Run an IO action protected by a pidfile
description:         
  Run an IO action protected by a pidfile. This will prevent
  more than one instance of your program to run at a time.       
license:             BSD3
license-file:        LICENSE
author:              Jon Petter Bergman
maintainer:          jon.petter.bergman@gmail.com
-- copyright:           
category:            System
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     System.PidFile
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10,
                       unix >=2.7 && <2.8
  hs-source-dirs:      src
  default-language:    Haskell2010
